--- a/src/IntelligentCooking/IntelligentCooking.DAL/IntelligentCooking.DAL.csproj
+++ b/src/IntelligentCooking/IntelligentCooking.DAL/IntelligentCooking.DAL.csproj
@@ -14,12 +14,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Context\" />
-    <Folder Include="EntityConfigurations\" />
     <Folder Include="Identity\" />
     <Folder Include="Infrastructure\" />
     <Folder Include="UnitsOfWork\" />
     <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\IntelligentCooking.Core\IntelligentCooking.Core.csproj" />
   </ItemGroup>
 
 </Project>
