Configured app user class

--- a/src/IntelligentCooking/IntelligentCooking.Core/IntelligentCooking.Core.csproj
+++ b/src/IntelligentCooking/IntelligentCooking.Core/IntelligentCooking.Core.csproj
@@ -10,4 +10,10 @@
     <Folder Include="Interfaces\Repositories\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.Extensions.Identity.Stores">
+      <HintPath>C:\Users\User\.nuget\packages\microsoft.extensions.identity.stores\2.2.0\lib\netstandard2.0\Microsoft.Extensions.Identity.Stores.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
