--- a/src/IntelligentCooking/IntelligentCooking.DAL/IntelligentCooking.DAL.csproj
+++ b/src/IntelligentCooking/IntelligentCooking.DAL/IntelligentCooking.DAL.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.6">
       <PrivateAssets>all</PrivateAssets>
@@ -14,7 +16,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Identity\" />
     <Folder Include="Infrastructure\" />
     <Folder Include="UnitsOfWork\" />
     <Folder Include="Repositories\" />
