--- a/src/IntelligentCooking/IntelligentCooking.Core/IntelligentCooking.Core.csproj
+++ b/src/IntelligentCooking/IntelligentCooking.Core/IntelligentCooking.Core.csproj
@@ -9,7 +9,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="2.2.0" />
+    <Reference Include="Microsoft.Extensions.Identity.Stores">
+      <HintPath>C:\Users\User\.nuget\packages\microsoft.extensions.identity.stores\2.2.0\lib\netstandard2.0\Microsoft.Extensions.Identity.Stores.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
