--- a/src/IntelligentCooking/IntelligentCooking.Web/appsettings.json
+++ b/src/IntelligentCooking/IntelligentCooking.Web/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "IntelligentCookingDb": "Data Source=.\\SQLEXPRESS;Initial Catalog=IntelligentCooking;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
