--- a/src/IntelligentCooking/InelligentCooking.BLL/InelligentCooking.BLL.csproj
+++ b/src/IntelligentCooking/InelligentCooking.BLL/InelligentCooking.BLL.csproj
@@ -10,8 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
-    <Folder Include="Services\" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
   </ItemGroup>
 
 </Project>
