--- a/src/IntelligentCooking/InelligentCooking.BLL/InelligentCooking.BLL.csproj
+++ b/src/IntelligentCooking/InelligentCooking.BLL/InelligentCooking.BLL.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CloudinaryDotNet" Version="1.8.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
   </ItemGroup>
 
