--- a/src/IntelligentCooking/IntelligentCooking.Web/appsettings.json
+++ b/src/IntelligentCooking/IntelligentCooking.Web/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "IntelligentCookingDb": "Data Source=.\\SQLEXPRESS;Initial Catalog=IntelligentCooking;Integrated Security=True"
   },
+  "CloudinaryCredentials": {
+    "Cloud": "detalb2kp",
+    "ApiKey": "584431327522372",
+    "Secret": "NNXcMB1zyi8zsQ6JsQYa7bJYhRc"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
