added cors config

--- a/src/IntelligentCooking/IntelligentCooking.Web/appsettings.json
+++ b/src/IntelligentCooking/IntelligentCooking.Web/appsettings.json
@@ -12,5 +12,11 @@
       "Default": "Warning"
     }
   },
+  "CorsOptions": {
+    "AllowedHosts": "*",
+    "AllowedOrigins": [
+      "*"
+    ]
+  },
   "AllowedHosts": "*"
 }
