--- a/src/client/package.json
+++ b/src/client/package.json
@@ -58,6 +58,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
     "express-json-file-crud": "0.0.5",
     "font-awesome": "^4.7.0",
     "form-data": "^2.5.1",
@@ -70,6 +71,7 @@
     "react-select": "^3.0.8",
     "react-slick": "^0.25.2",
     "react-star-ratings": "^2.3.0",
+    "react-table": "^6.10.3",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
