--- a/src/IntelligentCooking/IntelligentCooking.Web/appsettings.json
+++ b/src/IntelligentCooking/IntelligentCooking.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "IntelligentCookingDb": "Server=localhost,1433;Database=IntelligentCookingDB;User=sa;Password=adimiron1;"
+    "IntelligentCookingDb": "Server=.\\SQLEXPRESS;Database=IntelligentCooking;Integrated Security=true;"
   },
   "CloudinaryCredentials": {
     "Cloud": "detalb2kp",
