--- a/src/IntelligentCooking/IntelligentCooking.Web/IntelligentCooking.Web.csproj
+++ b/src/IntelligentCooking/IntelligentCooking.Web/IntelligentCooking.Web.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Infrastructure\ModelBinders\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
