--- a/src/client/package.json
+++ b/src/client/package.json
@@ -66,12 +66,15 @@
     "lodash": "^4.17.15",
     "npm": "^6.11.3",
     "react-bootstrap": "^1.0.0-beta.12",
+    "react-loader-spinner": "^3.1.4",
+    "react-promise-tracker": "^2.0.5",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.0",
     "react-select": "^3.0.8",
     "react-slick": "^0.25.2",
     "react-star-ratings": "^2.3.0",
     "react-table": "^6.10.3",
+    "react-textarea-autosize": "^7.1.0",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
