--- a/src/client/package.json
+++ b/src/client/package.json
@@ -4,11 +4,12 @@
   "description": "IntelligentCooking",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start:dev": "node_modules/.bin/webpack-dev-server --inline --mode development",
     "build": "webpack --mode production",
     "dev": "webpack-dev-server",
-    "mock:api": "json-server --watch dist/testdishes.json --port 4000"
+    "mock:api": "json-server --watch dist/testdishes.json --port 4000",
+    "prettier": "prettier  — write ./src/**/*.js"
   },
   "browserslist": [
     "last 10 version",
@@ -26,24 +27,32 @@
     "@babel/core": "^7.6.2",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/preset-env": "^7.6.2",
-    "@babel/preset-react": "^7.0.0",
-    "autoprefixer": "^9.6.1",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.6.3",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-react-css-modules": "^5.2.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
-    "css-mqpacker": "^7.0.0",
-    "cssnano": "^4.1.10",
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-node": "^4.0.0",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.19.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^6.0.0",
+    "jest": "^24.9.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
-    "react": "^16.10.0",
-    "react-dom": "^16.10.0",
-    "redux-devtools-extension": "^2.13.8",
+    "prettier": "^1.18.2",
+    "react-test-renderer": "^16.10.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^1.0.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
@@ -56,16 +65,22 @@
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "autoprefixer": "^9.6.4",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
+    "css-mqpacker": "^7.0.0",
+    "cssnano": "^4.1.10",
     "express-json-file-crud": "0.0.5",
     "font-awesome": "^4.7.0",
     "form-data": "^2.5.1",
     "i": "^0.3.6",
     "lodash": "^4.17.15",
     "npm": "^6.11.3",
+    "prop-types": "^15.7.2",
+    "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.12",
+    "react-dom": "^16.10.2",
     "react-loader-spinner": "^3.1.4",
     "react-promise-tracker": "^2.0.5",
     "react-redux": "^7.1.1",
@@ -76,6 +91,7 @@
     "react-table": "^6.10.3",
     "react-textarea-autosize": "^7.1.0",
     "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1"
