Test multi images

--- a/src/client/package.json
+++ b/src/client/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^2.1.2",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^6.0.0",
@@ -71,16 +72,22 @@
     "classnames": "^2.2.6",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
+    "cuid": "^2.1.6",
     "express-json-file-crud": "0.0.5",
     "font-awesome": "^4.7.0",
     "form-data": "^2.5.1",
     "i": "^0.3.6",
+    "immutability-helper": "^3.0.1",
     "lodash": "^4.17.15",
     "npm": "^6.11.3",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.12",
+    "react-dnd": "^9.4.0",
+    "react-dnd-html5-backend": "^9.4.0",
     "react-dom": "^16.10.2",
+    "react-drag-elements": "^0.1.2",
+    "react-dropzone": "^10.1.10",
     "react-loader-spinner": "^3.1.4",
     "react-promise-tracker": "^2.0.5",
     "react-redux": "^7.1.1",
