--- a/src/client/.eslintrc.json
+++ b/src/client/.eslintrc.json
@@ -1,7 +1,7 @@
 {
     "parser": "babel-eslint",
     "extends": ["airbnb", "prettier"],
-    "plugins": ["react","prettier", "import", "jest"],
+    "plugins": ["react","prettier", "import", "jest","react-hooks"],
     "env": {
         "browser": true,
         "node": true,
@@ -19,6 +19,10 @@
         }
     },
     "rules": {
+        "no-plusplus": 0,
+        "react-hooks/rules-of-hooks": 2, // Перевіряє правила хуків
+        "react-hooks/exhaustive-deps": 1,
+        "import/no-extraneous-dependencies": 0,
         "react/jsx-props-no-spreading": 0,
         "global-require": 0,
         "max-classes-per-file": 0,
@@ -31,7 +35,7 @@
         "jsx-a11y/label-has-associated-control": 0,
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
         "import/prefer-default-export": "off",
-        "import/no-unresolved": [2, {"commonjs": true, "amd": true}],
+        "import/no-unresolved": [0],
         "prettier/prettier": "error",
         "no-unused-expressions": [0],
         "no-param-reassign": 0,
