--- a/src/client/package.json
+++ b/src/client/package.json
@@ -97,6 +97,9 @@
     "react-star-ratings": "^2.3.0",
     "react-table": "^6.10.3",
     "react-textarea-autosize": "^7.1.0",
+    "react-virtualized": "^9.21.1",
+    "react-window": "^1.8.5",
+    "react-window-infinite-loader": "^1.0.5",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
