--- a/src/client/package.json
+++ b/src/client/package.json
@@ -91,6 +91,7 @@
     "react-loader-spinner": "^3.1.4",
     "react-promise-tracker": "^2.0.5",
     "react-redux": "^7.1.1",
+    "react-router": "^5.1.2",
     "react-router-dom": "^5.1.0",
     "react-select": "^3.0.8",
     "react-slick": "^0.25.2",
