Implemented basic validation

--- a/src/IntelligentCooking/IntelligentCooking.Web/IntelligentCooking.Web.csproj
+++ b/src/IntelligentCooking/IntelligentCooking.Web/IntelligentCooking.Web.csproj
@@ -5,12 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Infrastructure\ModelBinders\" />
-    <Folder Include="Models\ResponseModels\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="8.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.9" />
