--- a/src/IntelligentCooking/InelligentCooking.BLL/InelligentCooking.BLL.csproj
+++ b/src/IntelligentCooking/InelligentCooking.BLL/InelligentCooking.BLL.csproj
@@ -13,7 +13,13 @@
     <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="CloudinaryDotNet" Version="1.8.0" />
+    <PackageReference Include="FluentValidation" Version="8.4.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\ResponseModels\" />
+  </ItemGroup>
+
 
 </Project>
