--- a/src/IntelligentCooking/InelligentCooking.BLL/InelligentCooking.BLL.csproj
+++ b/src/IntelligentCooking/InelligentCooking.BLL/InelligentCooking.BLL.csproj
@@ -15,10 +15,7 @@
     <PackageReference Include="CloudinaryDotNet" Version="1.8.0" />
     <PackageReference Include="FluentValidation" Version="8.4.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Models\ResponseModels\" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
   </ItemGroup>
 
 
