Added token validation

--- a/src/IntelligentCooking/IntelligentCooking.Web/Settings/jwt_settings.json
+++ b/src/IntelligentCooking/IntelligentCooking.Web/Settings/jwt_settings.json
@@ -1,5 +1,6 @@
 {
   "JwtSettings": {
-    "Secret": "XgxdIEmrufHC47wXxtgNBOZfejr076QF"
+    "Secret": "XgxdIEmrufHC47wXxtgNBOZfejr076QF",
+    "LifeTime": "00:00:30" 
   }
 }
