--- a/src/client/package.json
+++ b/src/client/package.json
@@ -89,6 +89,7 @@
     "react-drag-elements": "^0.1.2",
     "react-dropzone": "^10.1.10",
     "react-loader-spinner": "^3.1.4",
+    "react-modal": "^3.11.1",
     "react-promise-tracker": "^2.0.5",
     "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
