--- a/src/IntelligentCooking/IntelligentCooking.Web/appsettings.production.json
+++ b/src/IntelligentCooking/IntelligentCooking.Web/appsettings.production.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "IntelligentCookingDb": "Server=.\\SQLEXPRESS;Database=IntelligentCooking;Integrated Security=true;"
+    "IntelligentCookingDb":
+      "Server=tcp:intelligentcookingsqlserver.database.windows.net,1433;Initial Catalog=IntelligentCookingDB;Persist Security Info=False;User ID=ungidrid;Password=LeoBit123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
 
   "Logging": {
