--- a/src/IntelligentCooking/IntelligentCooking.Web/appsettings.json
+++ b/src/IntelligentCooking/IntelligentCooking.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "IntelligentCookingDb": "Server=localhost\\SQLEXPRESS;Database=IntelligentCooking;Trusted_Connection=True;"
+    "IntelligentCookingDb": "Server=tcp:intelligentcookingsqlserver.database.windows.net,1433;Initial Catalog=IntelligentCookingDB;Persist Security Info=False;User ID=ungidrid;Password=LeoBit123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
 
   "Logging": {
