--- a/src/client/.eslintrc.json
+++ b/src/client/.eslintrc.json
@@ -19,9 +19,12 @@
         }
     },
     "rules": {
+        "react/button-has-type": 0,
         "react/jsx-one-expression-per-line": 0,
         "no-plusplus": 0,
-        "react-hooks/rules-of-hooks": 2, // Перевіряє правила хуків
+        "react/no-did-update-set-state": 0,
+        "react-hooks/rules-of-hooks": 2,
+        "react/destructuring-assignment": 0,
         "react-hooks/exhaustive-deps": 1,
         "import/no-extraneous-dependencies": 0,
         "react/jsx-props-no-spreading": 0,
@@ -31,7 +34,8 @@
         "react/state-in-constructor": 0,
         "no-restricted-syntax": [0],
         "react/jsx-max-props-per-line": [0],
-        "react/jsx-indent-props": ["error", 4],
+        "react/jsx-indent-props": 0,
+        "react/jsx-first-prop-new-line": 0,
         "react/jsx-indent": ["error", 4],
         "jsx-a11y/label-has-associated-control": 0,
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
