--- a/src/IntelligentCooking/IntelligentCooking.DAL/IntelligentCooking.DAL.csproj
+++ b/src/IntelligentCooking/IntelligentCooking.DAL/IntelligentCooking.DAL.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20191201174615_AddMoreDishes.cs" />
+    <Compile Remove="Migrations\20191201174615_AddMoreDishes.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.11" />
