search by name, working on refresh token

--- a/src/client/package.json
+++ b/src/client/package.json
@@ -90,8 +90,10 @@
     "react-dom": "^16.10.2",
     "react-drag-elements": "^0.1.2",
     "react-dropzone": "^10.1.10",
+    "react-helmet": "^5.2.1",
     "react-loader-spinner": "^3.1.4",
     "react-modal": "^3.11.1",
+    "react-notifications": "^1.4.3",
     "react-promise-tracker": "^2.0.5",
     "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
@@ -101,6 +103,7 @@
     "react-star-ratings": "^2.3.0",
     "react-table": "^6.10.3",
     "react-textarea-autosize": "^7.1.0",
+    "react-toastify": "^5.4.1",
     "react-virtualized": "^9.21.1",
     "react-window": "^1.8.5",
     "react-window-infinite-loader": "^1.0.5",
